--- a/Vistas/css/homeStyle.css
+++ b/Vistas/css/homeStyle.css
@@ -1,19 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+*{
+	font-family: "Poppins",sans-serif;
+}
+:root {
+	--color-inicial: rgb(205, 205, 216);
+	--color-final: rgb(178, 184, 173);
+  }
 .logotipo-res{
     display: flex;
 	flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-	background-image: url(/Vistas/imagenes/fondo1.png);
-	background-size: contain;
-	height: 400px;
-	mask-image: linear-gradient(#2f3033 70%, transparent);
+	background-image: url(/imagenes/fondo1.png);
+	background-size: cover;
+	height: 100vh;
+	padding-top: 4rem;
+	/* mask-image: linear-gradient(#2f3033 70%, transparent); */
 }
+
 .logotipo-res h1{
-	color: #fff;
+	color: #e9d3d3;
+	font-weight: 600;
+	font-size: 50px;
+	font-family: "Rowdies", sans-serif;
 }
 .main{
-	background-color: #2f3033;
+	background: rgb(244,228,215);
+	background: linear-gradient(90deg, rgba(244,228,215,1) 0%, rgba(255,244,235,1) 50%, rgba(242,220,201,1) 100%);
+
 }
 .seccion2{
 	color: #fff;
@@ -22,31 +38,62 @@
 	padding: 0 2rem;
 	justify-content: center;
 	align-items: center;
+	padding: 0 20rem;
 }
 .seccion2 h1{
-	color: #fff;
+	color: #000000;
 	font-size: 30px;
 	padding: 2rem;
 }
 .seccion2 p{
-	color: #fff;
-	padding: 2rem;
+	color: #000000;
+	padding: 1rem;
 	font-size: 16px;
 	text-align: center;
 
 }
-.d-block{
+
+.wrapper{
+    position: relative;
+    width: fit-content;
+    height:auto;
+}
+.boton-horario {
 	width: 300px;
-	height: 300px;
+	height: 50px;
+	padding: 10px 20px;
+	border: none;
+	border-radius: 20px;
+	color: #fff;
+	font-size: 16px;
+	cursor: pointer;
+	/* Animación para el parpadeo */
+	animation: parpadeo 1s infinite alternate;
+  }
+  /* Definición de la animación */
+  @keyframes parpadeo {
+	from {
+	  background-color: var(--color-inicial); /* Utilizando la variable para el color inicial */
+	}
+	to {
+	  background-color: var(--color-final); /* Utilizando la variable para el color final */
+	}
+  }
+
+.d-block{
+	margin: 0 auto;
+	width: 500px;
+	height: 500px;
 	border-radius: 50%;
-	
+	z-index: -1;
 }
 .carousel-inner img {
 	display: block;
-	margin: 2rem auto;
+	
 }
 .carousel{
 	margin-bottom: 3rem;
+	width: 100%;
 }
 
 .seccion3{
@@ -54,14 +101,14 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	background-color: #E2B40F;
+	background-color: #f5c528;
 	
 }
 .seccion3 h2{
 	font-size: 30px;
 	text-align: center;
-	padding: 2rem 2rem 0rem 2rem;
-
+	color: #000000;
+	margin-top: 3rem;
 }
 .chef{
 	position:absolute;
@@ -73,13 +120,17 @@
 .horario{
 	display: flex;
 	flex-direction: column;
-	padding-left: 3rem;
-	
-	margin-left: 2rem;
+	background-color: #000000;
+	padding: 2rem;
+	border-radius: 20px;
 }
 .horario p{
 	margin: 0 2rem;
 	font-size: 16px;
+	color: #fff;
+}
+.time{
+	width: 200px;
 }
 .ubicacion{
 	display: flex;
@@ -91,6 +142,26 @@
 .ubicacion a{
 	font-size: 16px;
 }
+.bi-geo-alt-fill{
+	width: 100px;
+}
 .iframe{
 	width: 100%;
+}
+
+@media (max-width: 767px) {
+	.logotipo{
+		width: 90%;
+		margin-top: 0px;
+		border-radius: 30px;
+	}
+	.d-block{
+		width: 100%;
+		height: 300px;
+		border-radius: 50%;
+		z-index: -1;
+	}
+	.seccion2{
+		padding: 1rem;
+	}
 }
