--- a/Vistas/css/comida.css
+++ b/Vistas/css/comida.css
@@ -7,11 +7,11 @@
     filter: blur(10px);
 }
 .menu-comida{
+    padding-top: 5rem;
     background-color: #FFC300;
     width: 100%;
     height: 100%;
     margin: 0;
-
 }
 
 .seccion1{
@@ -157,3 +157,14 @@ hr{
 }
 
 
+
+@media (max-width: 767px) {
+
+    .logotipo-res {
+        height: 25vh;
+        /* mask-image: linear-gradient(#2f3033 70%, transparent); */
+    }
+    .logotipo{
+        width: 100%;
+    }
+}
