--- a/Vistas/css/homeStyle.css
+++ b/Vistas/css/homeStyle.css
@@ -20,6 +20,12 @@
 	/* mask-image: linear-gradient(#2f3033 70%, transparent); */
 }
 
+.modal-body{
+	width: 100%;
+}
+.modal-body img{
+	width: 100%;
+}
 .logotipo-res h1{
 	color: #e9d3d3;
 	font-weight: 600;
@@ -146,7 +152,8 @@
 	width: 100px;
 }
 .iframe{
-	width: 100%;
+	width: 60%;
+	margin-bottom: 2rem;
 }
 
 @media (max-width: 767px) {
@@ -163,5 +170,10 @@
 	}
 	.seccion2{
 		padding: 1rem;
+	}
+	
+	.iframe{
+		width: 100%;
+		
 	}
 }
