--- a/Vistas/css/comida.css
+++ b/Vistas/css/comida.css
@@ -3,15 +3,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 
-.desenfoque{
-    filter: blur(10px);
+body{
+    background: rgb(255,195,0);
+    background: radial-gradient(circle, rgba(255,195,0,1) 0%, rgba(231,186,42,1) 100%);   
 }
+
 .menu-comida{
     padding-top: 5rem;
-    background-color: #FFC300;
-    width: 100%;
+    width: 60%;
     height: 100%;
-    margin: 0;
+    margin: 0 auto;
 }
 
 .seccion1{
@@ -165,6 +166,12 @@ hr{
         /* mask-image: linear-gradient(#2f3033 70%, transparent); */
     }
     .logotipo{
+        width: 100%;
+    }
+    .navbar {
+        padding: 0 !important;
+    }
+    .menu-comida{
         width: 100%;
     }
 }
