--- a/Vistas/css/homeStyle.css
+++ b/Vistas/css/homeStyle.css
@@ -65,13 +65,15 @@
     height:auto;
 }
 .boton-horario {
-	width: 300px;
-	height: 50px;
+	width: 250px;
+	height: 60px;
 	padding: 10px 20px;
 	border: none;
-	border-radius: 20px;
+	border-radius: 50px;
+	border-bottom: solid 5px #3b3a03;
 	color: #fff;
-	font-size: 16px;
+	font-size: 18px;
+	font-family: "Poppins";
 	cursor: pointer;
 	/* Animación para el parpadeo */
 	animation: parpadeo 1s infinite alternate;
